--- a/style.css
+++ b/style.css
@@ -1322,6 +1322,11 @@ a:hover, a:active {
     margin-left: 48px;
   }
 }
+@media all and (min-width: 1600px) {
+  .homepage-screen h1 span:last-of-type {
+    margin-left: 53px;
+  }
+}
 .homepage-screen .site-description {
   margin: 0;
   padding: 0;
@@ -1534,11 +1539,11 @@ a:hover, a:active {
   margin: 0;
 }
 .background-image {
+  background: url('assets/dark-site-background.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background: url('assets/dark-site-background.jpg') no-repeat center center fixed;
 }
 .site-header {
   position: fixed;
